# labor_exchange

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TASK.md  alembic.ini  docker-compose.test.yaml  docker-compose.yaml  docker-compose_test.yaml  main.py  mypy.ini  pyproject.toml
.github/workflows/: python-package.yml
app/routers/: user.py
app/schemas/: user.py
backend/src/: db_settings.py  main.py
docs/: labor_exchange.drawio.xml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  index.tsx
migrations/: env.py
migrations/versions/: 272a94fcabff_create_tables.py  e6b667630d8a_добавлены_таблицы_users_jobs_responses.py
src/: .env.dev  .env.test  .env_example  alembic.ini  db_settings.py  di.py  main.py  pytest.ini  requirements.txt  test_alembic.ini  utils.py
src/api/: __init__.py
src/applications/: command.py
src/config/: __init__.py  auth.py  db_settings.py
src/core/: config.py  di.py  exceptions.py  security.py
src/database/: engine.py
src/dependencies/: __init__.py  containers.py  current_user.py  database.py  db.py  job.py  user.py
src/domain/: dm_schemas.py  do_schemas.py
src/factories/: jobs.py  responses.py
src/fixtures/: jobs.py  responses.py  users.py
src/infrastructure/: repos.py
src/interfaces/: __init__.py  i_repository.py  i_sqlalchemy.py
src/migrations/: env.py
src/models/: __init__.py  job.py  jobs.py  response.py  responses.py  user.py  users.py
src/queries/: __init__.py  base_repository.py  job.py  jobs.py  response.py  responses.py  (+2 more)
tests/: conftest.py
(+236 files in other folders)
